--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,5 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    
-  </head>
-  <body>
+
     <h3>Bienvenido a <%= title %></h3>
     <p>El portal donde podrá crar sus propios juegos!</p>
-   
-  </body>
-</html>
+    <p><a href="/quizes">Comience a jugar</a></p>
+    
