--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -21,7 +21,8 @@
       
       <nav class = "main" id = "n1" role="navigation">
 	<span><a href= "/"> Inicio </a></span>
-	<span><a href= "/quizes/question"> Preguntas </a></span>
+	<span><a href= "/quizes"> Preguntas </a></span>
+	<span><a href= "/quizes"> Buscar preguntas </a></span>
 	<span><a href= "/quizes/creditos/author"> Autor </a></span>
       </nav>
       
