--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,11 +6,11 @@
     <link rel='stylesheet' type='text/css' href='/stylesheets/style.css' />
     <link rel='stylesheet'
 	  type='text/css'
-	  media='only screen and (max-width: 800px) and (min-width: 479px)'
+	  media='only screen and (min-width: 530px) and (min-device-width: 481px)'
 	  href='/stylesheets/wide.css'/>
     <link rel='stylesheet'
 	  type='text/css'
-	  media='only screen and (max-device-width: 480px)'
+	  media='only screen and (max-width: 480px)'
 	  href='/stylesheets/smaartphone.css'/>
   </head>
   <body>
@@ -22,11 +22,20 @@
       <nav class = "main" id = "n1" role="navigation">
 	<span><a href= "/"> Inicio </a></span>
 	<span><a href= "/quizes"> Preguntas </a></span>
-	<span><a href= "/quizes"> Buscar preguntas </a></span>
+	
 	<span><a href= "/quizes/creditos/author"> Autor </a></span>
       </nav>
       
       <section class = "main" id ="s1">
+	<% if(errors.length) { %>
+	  <span id = 'ErrorMsgs'>
+	    Corregir errores: <br/>
+	    <% for (var i in errors) { %>
+	      <span> <%= errors[i].message %> </span> <br/>
+	    <% } %>
+	  </span>
+	 <% } %>
+	 
 	<div><%- body %></div>
       </section>
       
