--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,11 +1,25 @@
 <table>
 <% var i; for (i=0; i< quizes.length; i++) { %>
-  <tr><td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td></tr>
+  <tr>
+    <td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
+    <td> <%= quizes[i].tema %> </td>
+    <td><a href="quizes/<%= quizes[i].id %>/edit"><button>editar</button></a></td>
+   
+    <td>
+      <form method= "post" action="/quizes/<%= quizes[i].id %>?_method=delete">
+	<button type = "submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">
+	  borrar
+	</button>
+      </form>
+    </td>
+  </tr>
 <% } %>
-</table>
+</table><p>
 
 
 <form method="get" action="/quizes">
 	<input type="text"  name="search" value="Buscar pregunta" />
 	<input type="submit" value="Buscar" />
-</form>
+</form><p>
+
+<a href="/quizes/new"><button type="button">Crear pregunta</button></a>
