--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset = "utf-8">
     <title> Quiz </title>
-    <link rel='stylesheet' type='text/css' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='stylesheet'
 	  type='text/css'
 	  media='only screen and (min-width: 530px) and (min-device-width: 481px)'
@@ -16,6 +16,12 @@
   <body>
     <div id = "page-wrap">
       <header class= "main" id = "h1">
+	<%if(!session.user){%>
+	  <span class="right"><a href="/login">Login</a></span>
+	<%}else{%>
+	  <span class = "right"> <%=session.user.username%> <a href="/logout">Logout</a></span>
+	<%}%>
+	  
 	<h2> Quiz <span>: el juego de las preguntas </span></h2>
       </header>
       
