--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -2,6 +2,8 @@
 <% var i; for (i=0; i< quizes.length; i++) { %>
   <tr>
     <td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
+    <%if(session.user){%>
+    
     <td> <%= quizes[i].tema %> </td>
     <td><a href="quizes/<%= quizes[i].id %>/edit"><button>editar</button></a></td>
    
@@ -12,6 +14,7 @@
 	</button>
       </form>
     </td>
+    <%}%>
   </tr>
 <% } %>
 </table><p>
@@ -22,4 +25,6 @@
 	<input type="submit" value="Buscar" />
 </form><p>
 
+<%if(session.user){%>
 <a href="/quizes/new"><button type="button">Crear pregunta</button></a>
+<%}%>
