--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -28,6 +28,8 @@
       <nav class = "main" id = "n1" role="navigation">
 	<span><a href= "/"> Inicio </a></span>
 	<span><a href= "/quizes"> Preguntas </a></span>
+	<span><a href= "/quizes/mostrardb"> Base de Datos </a></span>
+	<span><a href= "/quizes/estadisticas"> Estadísticas </a></span>
 	
 	<span><a href= "/quizes/creditos/author"> Autor </a></span>
       </nav>
