--- a/views/quizes/mostrardb.ejs
+++ b/views/quizes/mostrardb.ejs
@@ -1,4 +1,4 @@
-<p> Preguntas  y mostrar respuestas</p>
+<h3> Preguntas: mostrar respuestas</h3>
 <table>
  <tr>
     <th> ID</th>
@@ -18,8 +18,9 @@
  
  
 </table>
+<br>
 
-<p> Comentarios y mostrar comentarios </p>
+<h3> Comentarios: mostrar comentarios </h3>
 <table>
  <tr>
     <th> Comentario(ID)</th>
