--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,6 +15,8 @@ nav span	{ margin: 0px 10px 0px 0px;  width: 100%;
 
 .right {float: right;}
 
+.quiz_img {height: 150px; float: left;}
+
  
 
 a {
