--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -17,9 +17,16 @@
     <div id = "page-wrap">
       <header class= "main" id = "h1">
 	<%if(!session.user){%>
-	  <span class="right"><a href="/login">Login</a></span>
+	  <span class="right">
+	      <a href="/user">Sign up</a>
+	       <a href="/login">Login</a>
+	  </span>
 	<%}else{%>
-	  <span class = "right"> <%=session.user.username%> <a href="/logout">Logout</a></span>
+	  <span class = "right"> 
+	    <%=session.user.username%>
+	      <a href="/user">Settings</a>
+	      <a href="/logout">Logout</a>
+	  </span>
 	<%}%>
 	  
 	<h2> Quiz <span>: el juego de las preguntas </span></h2>
@@ -28,6 +35,9 @@
       <nav class = "main" id = "n1" role="navigation">
 	<span><a href= "/"> Inicio </a></span>
 	<span><a href= "/quizes"> Preguntas </a></span>
+	<%if (session.user){%>
+	  <span><a href="/user/<%=session.user.id%>/quizes">Mis Preguntas</a></apan>
+	<%}%>
 	<span><a href= "/quizes/mostrardb"> Base de Datos </a></span>
 	<span><a href= "/quizes/estadisticas"> Estadísticas </a></span>
 	
