--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,11 +1,12 @@
 <table>
 <% var i; for (i=0; i< quizes.length; i++) { %>
   <tr>
-    <td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
-    <%if(session.user){%>
+    <td><a href="/quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
+    <%if(session.user) {
+      if (session.user.isAdmin || session.user.id === quizes[i].UserId){%>
     
     <td> <%= quizes[i].tema %> </td>
-    <td><a href="quizes/<%= quizes[i].id %>/edit"><button>editar</button></a></td>
+    <td><a href="/quizes/<%= quizes[i].id %>/edit"><button>editar</button></a></td>
    
     <td>
       <form method= "post" action="/quizes/<%= quizes[i].id %>?_method=delete">
@@ -14,7 +15,8 @@
 	</button>
       </form>
     </td>
-    <%}%>
+    <%}
+    }%>
   </tr>
 <% } %>
 </table><p>
