--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -1,4 +1,5 @@
 
+
     <form method="get" action="/quizes/<%= quiz.id %>/answer">
     	<p>Pregunta: <%= quiz.pregunta %> </p>
     	<input type = "text" name = "respuesta" value = "Respuesta"/>
@@ -13,12 +14,16 @@
 
 <p><strong>Comentarios:</strong></p>
 <%for (index in quiz.Comments) {%>
-  <%if(quiz.Comments[index].publicado || session.user){%>
-    <p>- <%=quiz.Comments[index].texto%>
-      <%if(session.user && !quiz.Comments[index].publicado){%>
-	<a href="/quizes/<%=quiz.id %>/comments/<%=quiz.Comments[index].id%>/publish">
-	  <button>Publicar</button></a>
-      <%}%>
-     </p>
+  <%if(quiz.Comments[index].publicado){%>
+    
+    <p>- <%=quiz.Comments[index].texto%> </p>
+    
+  <%} else if (session.user && (session.user.isAdmin || (session.user && quiz.UserId === session.user.id))){%>
+      <p>- <%=quiz.Comments[index].texto%>
+     
+      <a href="/quizes/<%=quiz.id %>/comments/<%=quiz.Comments[index].id%>/publish">
+	  <button>Publicar</button></a></p>
     <%}%>
+     
+   
 <%}%>
